--- a/javascript/grid-ui/public/index.html
+++ b/javascript/grid-ui/public/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
   <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-  <title>Krish Grid</title>
+  <title>Bell</title>
 </head>
 
 <body>
