--- a/javascript/grid-ui/public/index.html
+++ b/javascript/grid-ui/public/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <link href="logo192.png" rel="apple-touch-icon"/>
   <link href="manifest.json" rel="manifest"/>
-  <title>Selenium Grid</title>
+  <title>Automation Grid</title>
 </head>
 
 <body>
